<resources>
    <string name="app_name">Calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="dot">.</string>
    <string name="TODO">TODO</string>
    <string name="ANS">ANS</string>
    <string name="equals">=</string>
    <string name="addition">+</string>
    <string name="substraction">-</string>
    <string name="multiplication">x</string>
    <string name="divison">÷</string>
    <string name="DEL">DEL</string>
    <string name="AC">AC</string>

    <string name="display">Enter in a value</string>

</resources>